# PicknPlace

./: README.md
PlacingBenchmarkMetrics/: README.md
PlacingBenchmarkMetrics/image_difference/: CMakeLists.txt  README.md  package.xml
PlacingBenchmarkMetrics/image_difference/cfg/: Params.cfg
PlacingBenchmarkMetrics/image_difference/launch/: camera.launch  image_diff.launch
PlacingBenchmarkMetrics/image_difference/nodes/: image_diff.py
PlacingBenchmarkMetrics/placing_metrics2/: CMakeLists.txt  README.md  data.csv
PlacingBenchmarkMetrics/placing_metrics2/src/: CMakeLists.txt  picknplace.cpp  setup_diff.cpp
PlacingBenchmarkMetrics/plots/: README.md  article_figs.py
PlacingBenchmarkMetrics/plots/data/: A_error_zones.csv  A_total_error.csv  A_total_error_z.csv  B_error_zones.csv  B_total_error.csv  B_total_error_caca.csv  C_error_zones.csv  C_total_error.csv
PlacingBenchmarkMetrics/test/: CMakeLists.txt
ROSPlan/: plan_tutorial_03.pddl  tutorial.bash  tutorial_01.launch  tutorial_03.launch  tutorial_10.launch
ROSPlan/rosplan_dependencies/hddl_parser/: CMakeLists.txt  LICENSE  README.md
ROSPlan/rosplan_dependencies/hddl_parser/data/: domain.hddl  (+1 more)
ROSPlan/rosplan_planning_system/: CMakeLists.txt  package.xml
data/: all.csv  def_metric.py  full.html  garment.html  o1_plg_can.pcd  o1_plg_e1.pcd  pca.py  plot.py  temp-plot.html  test.pcd  z.csv  z_class.csv  z_plot_class.csv
data/save_data/: README.md  commands.sh  create_folders.sh  init.sh  visualize.rviz
data/save_metric/: execution.py
data/save_metric/c/: execution.py
data/save_metric/node/: save_metric_csv.py
data/save_metric/python/: .def_metric.py.swp  README.md  all (another copy).csv  all (copy).csv  all.csv  clustering.py  dbscan (copy).py  def_metric.py  def_metric_swo.py  def_metric_swp.py  grid_sizes.csv  hierarchical.py  kmeans.py  plot_results.py  pred_classes.csv  pred_classes_7classes.csv  pred_classes_o1.csv  pred_classes_o1o2_4clases.csv  tests.py
deformation/: CMakeLists.txt  package.xml
deformation/nodes/: deformation.py
deformation/src/: deformation.cpp
deformation/tests/: CMakeLists1.txt  CMakeLists2.txt  CMakeLists3.txt
iri_kinova_linear_movement/: CMakeLists.txt  package.xml
iri_kinova_linear_movement/config/: params.yaml
iri_kinova_linear_movement/launch/: node.launch  test.launch
iri_kinova_linear_movement/src/: kinova_linear_movement_alg.cpp  kinova_linear_movement_alg_node.cpp
move_to_place/: hsv_range_extraction.py  hsv_segmentation.py
pick_n_place/: CMakeLists.txt  README.md  package.xml
pick_n_place/action/: activateSM.action
pick_n_place/cfg/: PickGarmentDemo.cfg  PicknPlace.cfg
pick_n_place/config/: arm_module_default.yaml  gripper_module_default.yaml  head_module_default.yaml  move_platform_config.yaml  params.yaml  picknplace.rviz  play_motion_module_default.yaml  torso_module_default.yaml
pick_n_place/config/motions/: final_position.yaml  give_garment.yaml  pregive.yaml  set_position.yaml
pick_n_place/config/rviz/: garment_demo.rviz
pick_n_place/include/: pick_garment_demo_alg.h  pick_garment_demo_alg_node.h  pick_n_place_alg.h  pick_n_place_alg_node.h
pick_n_place/iri_demos_kinova/: CMakeLists.txt  package.xml
pick_n_place/iri_demos_kinova/cfg/: DemosKinova.cfg
pick_n_place/iri_demos_kinova/include/: demos_kinova_alg.h  demos_kinova_alg_node.h
pick_n_place/iri_demos_kinova/launch/: node.launch  picknplace.launch  picknplace_demo.launch  rs_camera.launch  test.launch
pick_n_place/iri_demos_kinova/src/: demos_kinova_alg.cpp  demos_kinova_alg_node.cpp
pick_n_place/iri_kinova_linear_movement/: README.md
pick_n_place/iri_kinova_linear_movement/action/: kinova_linear_movement.action
pick_n_place/iri_kinova_linear_movement/cfg/: KinovaLinearMovement.cfg
pick_n_place/iri_kinova_linear_movement/include/: kinova_linear_movement_alg.h  kinova_linear_movement_alg_node.h
pick_n_place/iri_kinova_linear_movement/launch/: dual_kinova.launch  node.launch
pick_n_place/launch/: camera_n_kinova.launch  cameras.launch  kinova.launch  kinova_vision.launch  multiple_cameras.launch  node.launch  pick_garment_demo.launch  pick_garment_demo_dev.launch  pick_garment_demo_sim.launch  pick_garment_demo_tiago.launch  picknplace_demo.launch
pick_n_place/src/: pick_garment_demo_alg.cpp  pick_garment_demo_alg_node.cpp  pick_n_place_alg.cpp  pick_n_place_alg_node.cpp
planner/: domain_PICKNPLACE.pddl  problem_PICKNPLACE.pddl  problem_PICKNPLACE2.pddl  problem_PICKNPLACE4.pddl
pnp_planner/: CMakeLists.txt  Notas  README.md  domain_PICKNPLACE.pddl  package.xml  plan.dot  problem_PICKNPLACE.pddl  rosplan_domain.pddl  rosplan_domain_durative.pddl  rosplan_problem.pddl  rosplan_problem_durative.pddl
pnp_planner/launch/: plan.dot  plan_tutorial_03.pddl  rosplan_tutorial.launch  rosplan_tutorial02.launch  rosplan_tutorial03.launch  rosplan_tutorial04.launch  rosplan_tutorial10.launch  rosplan_tutorial_04_simple.pddl  tutorial.bash  tutorial04.bash
pnp_planner/para borrar/: domain_PICKNPLACE2.pddl  domain_PICKNPLACE3.pddl  domain_PICKNPLACE4.pddl  problem_PICKNPLACE3.pddl
pnp_planner/pddl/: plan.pddl  problem.pddl
test/: harris.py
tiago_pcl_tutorial/: CMakeLists.txt
tiago_pcl_tutorial/config/: pcl_regions.rviz
tiago_pcl_tutorial/launch/: picknplace.launch  segment_table.launch
tiago_pcl_tutorial/src/nodes/: region_segment.cpp  segment_table.cpp
vision_pick_place/: CHANGELOG.rst  CMakeLists.txt  package.xml
vision_pick_place/cfg/: planesegm.cfg  region.cfg  segment.cfg
vision_pick_place/config/: experiments.rviz  pcl_regions.rviz  picknplace.rviz
vision_pick_place/include/vision_pick_place/: pcl_filters.hpp
vision_pick_place/launch/: cylinder_detector.launch  main_plane_detector.launch  pcl_region.launch  pcl_segment.launch  picknplace.launch  segment_table.launch
vision_pick_place/src/: geometry.cpp  pcl_filters.cpp  tf_transforms.cpp
vision_pick_place/src/nodes/: cylinder_detector.cpp  detect_main_plane.cpp  pcl_segment.cpp  region_segment.cpp  segment_table.cpp
(+624 files in other folders)
